ipc/ipdl/test/ipdl/error/undeclParamType.ipdl
//error: argument typename `FARGLEGARGLE' of message `Msg' has not been declared

[ChildProc=any]
protocol undeclParamType {

child: async Msg(FARGLEGARGLE p);

};
